# Huffman-Coding

./: .travis.yml  CMakeLists.txt  README.md
include/: CLI.h  Huffman.h  HuffmanArchiver.h  HuffmanIO.h
src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  HuffmanIO.cpp  main.cpp
test/: TestCLI.cpp  TestHuffman.cpp  TestHuffmanArchiver.cpp  TestHuffmanIO.cpp
